# scm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  tutorial_notebook.ipynb
datasets/: README.md  crime_facet_list.txt  diseasome_facet_list.txt  olesen_2002.txt  pollinators_facet_list.txt  simple_facet_list.txt
src/: CMakeLists.txt  io_functions.h  mcmc_sampler.cpp  rejection_sampler.cpp  types.h
src/sampling/: mcmc.h  rejection.h
src/scm/: CMakeLists.txt  scm.cpp  scm.h
utilities/: README.md  bipartite_to_max_facets.py  prune.py
